Rips off `javax.inject`.